# gorilla/swagger.yaml
@@ -91,6 +91,46 @@ paths:
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
+    /products/{id}:
+        delete:
+            description: Update a products details
+            operationId: deleteProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "201":
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "501":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - products
+        get:
+            description: Return a list of products from the database
+            operationId: listSingleProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - products
+    /products{id}:
         put:
             description: Update a products details
             operationId: updateProduct
@@ -117,29 +157,6 @@ paths:
                     $ref: '#/responses/errorResponse'
                 "422":
                     $ref: '#/responses/errorValidation'
-            tags:
-                - products
-    /products/{id}:
-        delete:
-            description: Update a products details
-            operationId: deleteProduct
-            responses:
-                "201":
-                    $ref: '#/responses/noContentResponse'
-                "404":
-                    $ref: '#/responses/errorResponse'
-                "501":
-                    $ref: '#/responses/errorResponse'
-            tags:
-                - products
-        get:
-            description: Return a list of products from the database
-            operationId: listSingle
-            responses:
-                "200":
-                    $ref: '#/responses/productResponse'
-                "404":
-                    $ref: '#/responses/errorResponse'
             tags:
                 - products
 produces:
